--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
             const projects = [
                 {
-                    title: 'Capstone Final Year Project for Polytechnic MIT WPU',
+                    title: 'Capstone Registration portal for students, Project for Polytechnic MIT WPU',
                     description: 'A full-stack web application to automate the capstone project registration process, featuring multi-role dashboards and an AI-powered idea similarity checker.',
                     stack: ['JavaScript', 'HTML', 'CSS', 'Node.js', 'Supabase'],
                     liveLink: 'https://mitcapstoneregistration.netlify.app/'
@@ -497,3 +497,4 @@
     </script>
 </body>
 </html>
+
