--- a/index.html
+++ b/index.html
@@ -333,6 +333,12 @@
                     description: 'A web application that leverages Natural Language Processing (NLP) to translate user-inputted English queries into SQL commands.',
                     stack: ['Python', 'NLP','SQL'],
                     liveLink: 'https://english-to-sql-pbl2.onrender.com'
+                },
+                {
+                    title: 'Movie Picker',
+                    description: 'Stop getting tired to search movies, just hop and pop the corn',
+                    stack: ["HTML5", "Tailwind CSS", "React 18"],
+                    liveLink: 'https://pop-spin-cinema.netlify.app/'
                 }
             ];
 
@@ -391,6 +397,11 @@
                     name: 'DAV National Sports', 
                     issuer: 'DAV College Managing Committee',
                     path: 'basketball_national.jpg'
+                },
+                { 
+                    name: 'Java Course Mastering The Fundamentals', 
+                    issuer: 'Scaler-Topics',
+                    path: 'Ansh thakare java Certificate.jpg'
                 }
             ];
 
@@ -497,4 +508,5 @@
     </script>
 </body>
 </html>
+
 
