--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 },
                 {
                     title: 'Movie Picker',
-                    description: 'Stop getting tired to search movies, just hop and pop the corn',
+                    description: 'Movie Picker makes movie nights easy—just spin, and instantly get a random film suggestion from a curated list. No more endless searching or indecision—let the app pick your movie for you!',
                     stack: ["HTML5", "Tailwind CSS", "React 18"],
                     liveLink: 'https://pop-spin-cinema.netlify.app/'
                 }
@@ -508,5 +508,6 @@
     </script>
 </body>
 </html>
+
 
 
