--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 
             // --- DATA CONFIGURATION ---
-            const resumePath = 'Ansh_resume.pdf'; 
+            const resumePath = 'ansh thakare RESUME(1).docx'; 
 
             const skills = [
                 { name: 'Python', icon: 'fab fa-python' },
@@ -508,6 +508,7 @@
     </script>
 </body>
 </html>
+
 
 
 
